// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin/pages index 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/api/admin/pages?page=1&limit=20",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`admin/pages set index 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/api/admin/pages?page=1&limit=20",
      },
    ],
    Array [
      Object {
        "data": Object {
          "id": 1,
        },
        "method": "put",
        "url": "/api/admin/pages/index",
      },
    ],
    Array [
      Object {
        "method": "get",
        "url": "/api/admin/pages?page=1&limit=20",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
